# youtube-tool

./: .gitignore  README.md  main.py  pl_response.html  pyproject.toml  yt.ipynb  yt.py
.ipynb_checkpoints/: yt-checkpoint.ipynb
src/tests/: test_ytdlp.py
src/tests/snapshots/: snap_test_ytdlp.py
src/youtube_tool/: __init__.py  constants.py  dto.py  parser.py  playlist.py  test_youtube_parser.py  test_youtube_tool.py  types.py
src/youtube_tool/__tests__/: test_api.py  test_response_mock.py  test_youtube_parser.py  test_youtube_tool.py
