[project]
name = "youtube-tool"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Axmin", email = "56112475+ax-sh@users.noreply.github.com" }
]
dependencies = [
    "yt-dlp[default]>=2024.7.16",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_tool"]
