[project]
name = "youtube-tool"
version = "0.3.0"
description = "Add your description here"
authors = [
    { name = "Axmin" }
]
dependencies = [
    "yt-dlp[default]>=2024.10.22",
    "pydantic>=2.9.2",
    "faker>=30.8.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    #    "youtube-tool @ git+https://github.com/ax-sh/youtube-tool",
    "respx>=0.21.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
    "pytest-spec>=3.2.0",
    "pytest-ruff>=0.4.1",
    "pytest-sugar>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_tool"]

[tool.rye.scripts]
start = "python main.py"
format = "ruff format"
# Complex tasks with arguments
test = { cmd = "pytest --ruff --ruff-format -p sugar --verbose" }
check = [
#    "black --check .",
    "flake8 .",
    "mypy .",
    "pytest"
]
[tool.git-cliff.git]
conventional_commits = true
commit_parsers = []
filter_commits = false